--- a/app/views/factories/_form.html.erb
+++ b/app/views/factories/_form.html.erb
@@ -55,7 +55,7 @@
       
       <%= ff.text_field :percent, :class => "form-control"  %>
     <% end %>
-    <%= f.add_nested_fields_link :discounts %>
+    <%= f.add_nested_fields_link :discounts, t('brand.add_discount') %>
   </div>
   <h2>Свет</h2>
   <div class="col-sm-4">
