--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,12 +26,11 @@
         <li><%= link_to t('project.projects'), projects_path %></li>
         <li><%= link_to t('products.products'), products_path %></li>
         <li><%= link_to t('factories.factory'), factories_path %></li>
-    
-        <li><%= link_to t('styles'), styles_path %></li>
-        <li><%= link_to t('companies'), companies_path %></li>
+        <li><%= link_to t('styles.styles'), styles_path %></li>
+        <li><%= link_to t('companies.companies'), companies_path %></li>
         <li><%= link_to t('clients.clients'), clients_path %></li>
-        <li><%= link_to t('cities'), cities_path %></li>
-        <li><%= link_to t('deliveries'), deliveries_path %></li>
+        <li><%= link_to t('cities.cities'), cities_path %></li>
+        <li><%= link_to t('deliveries.deliveries'), deliveries_path %></li>
         <li><%= link_to t('type_furnitures.type_furniture'), type_furnitures_path %></li>
       </ul>
     </div><!-- /.navbar-collapse -->
