--- a/app/views/cities/_city.html.erb
+++ b/app/views/cities/_city.html.erb
@@ -1,5 +1,5 @@
 <tr id="city_<%= city.id %>" >
   <td><%= city.name %></td>
-  <td><%= link_to 'Edit', edit_city_path(city), remote: true, class: "btn btn-sm btn-info" %></td>
-  <td><%= link_to 'Destroy', city, method: :delete, remote: true,  data: { confirm: 'Are you sure?' }, class: "btn btn-sm btn-danger" %></td>
+  <td><%= link_to t('edit'), edit_city_path(city), remote: true, class: "btn btn-sm btn-info" %></td>
+  <td><%= link_to t('delete'), city, method: :delete, remote: true,  data: { confirm: 'Are you sure?' }, class: "btn btn-sm btn-danger" %></td>
 </tr>
