--- a/app/views/cities/_form.html.erb
+++ b/app/views/cities/_form.html.erb
@@ -4,11 +4,11 @@
   <div class="row">
     <div class="col-sm-6">
       <div class="form-group">
-      <%= f.label :name %><br>
+      <%= f.label t('cities.name') %><br>
       <%= f.text_field :name, :class => "form-control" %>
     </div>
     <div class="actions">
-      <%= f.submit  @city.new_record? ? "Create City" : "Update City", :class => "btn btn-primary" %>
+      <%= f.submit  @city.new_record? ? t('create') : t('update'), :class => "btn btn-primary" %>
     </div>
   </div>
 </div>
