--- a/app/views/cities/index.html.erb
+++ b/app/views/cities/index.html.erb
@@ -1,14 +1,14 @@
 <div class="container">
   <p id="notice"><%= notice %></p>
 
-  <h2>Listing Cities</h2>
+  <h2><%= t('cities.listing') %></h2>
   <div class="well">
-    <%= link_to 'New City', new_city_path, remote: true, class: "btn btn-primary" %>
+    <%= link_to t('cities.new'), new_city_path, remote: true, class: "btn btn-primary" %>
   </div>
   <table class="table table-bordered table-striped">
     <thead>
       <tr>
-        <th>Name</th>
+        <th><%= t('cities.name') %></th>
         <th colspan="3"></th>
       </tr>
     </thead>
