--- a/app/views/cities/new.js.erb
+++ b/app/views/cities/new.js.erb
@@ -1,5 +1,5 @@
 // Add the dialog title
-$('#dialog h3').html("<i class='glyphicon glyphicon-plus'></i> Add New City");
+$('#dialog h3').html("<i class='glyphicon glyphicon-plus'></i>  <%= t('cities.new') %>");
  
 // Render the new form
 $('.modal-body').html('<%= j render("form") %>');
