--- a/app/views/clients/edit.js.erb
+++ b/app/views/clients/edit.js.erb
@@ -1,5 +1,5 @@
 // Add the dialog title
-$('#dialog h3').html("<i class=' glyphicon glyphicon-pencil'></i> Edit Client");
+$('#dialog h3').html("<i class=' glyphicon glyphicon-pencil'></i>  <%= t('client.edit_client') %>");
  
 // Render the edit form
 $('.modal-body').html('<%= j render("form") %>');
