--- a/app/views/clients/index.html.erb
+++ b/app/views/clients/index.html.erb
@@ -1,21 +1,21 @@
 <div class="container">
   <p id="notice"><%= notice %></p>
 
-  <h2>Listing Clients</h2>
+  <h2><%= t('client.listing') %></h2>
   <div class="well">
-    <%= link_to 'New Client', new_client_path, remote: true, class: "btn btn-primary" %>
+    <%= link_to t('client.new_client'), new_client_path, remote: true, class: "btn btn-primary" %>
   </div>
   <div class="new-client"></div>
 
   <table class="table table-bordered table-striped">
     <thead>
       <tr>
-        <th>Name</th>
-        <th>Company</th>
-        <th>Status position</th>
-        <th>Telephone</th>
+        <th><%= t('client.name') %></th>
+        <th><%= t('company.name') %></th>
+        <th><%= t('client.status_position') %></th>
+        <th><%= t('client.telephone') %></th>
         <th>Email</th>
-        <th>Address</th>
+        <th><%= t('company.address') %></th>
         <th colspan="3"></th>
       </tr>
     </thead>
