--- a/app/views/companies/_company.html.erb
+++ b/app/views/companies/_company.html.erb
@@ -1,8 +1,8 @@
 <tr id="company_<%=company.id %>">
 	<td><%= company.name %></td>
 	<td><%= company.address %></td>
-	<td><%= link_to 'Edit', edit_company_path(company), remote: true, :class => 'btn btn-sm btn-info' %>
+	<td><%= link_to t('edit'), edit_company_path(company), remote: true, :class => 'btn btn-sm btn-info' %>
     </td>
-	<td><%= link_to 'Delete', company, remote: true, :method => :delete, data: {confirm: "Delete Company: #{company.name}"}, :class => 'btn btn-sm btn-danger' %>
+	<td><%= link_to t('delete'), company, remote: true, :method => :delete, data: {confirm:  " Удалить :#{company.name}"}, :class => 'btn btn-sm btn-danger' %>
  </td>
 </tr>
