--- a/app/views/companies/_form.html.erb
+++ b/app/views/companies/_form.html.erb
@@ -5,15 +5,15 @@
   <div class="row">
   <div class="col-sm-6">
     <div class="form-group">
-      <%= f.label :name, :class => "control-label" %><br>
+      <%= f.label t('companies.company'), :class => "control-label" %><br>
       <%= f.text_field :name, :class => "form-control" %>
     </div>
     <div class="form-group">
-      <%= f.label :address, :class => "control-label" %><br>
+      <%= f.label t('companies.address'), :class => "control-label" %><br>
       <%= f.text_field :address, :class => "form-control" %>
     </div>
     <div class="actions">
-      <%= f.submit  @company.new_record? ? "Create Company" : "Update Company", :class => "btn btn-primary" %>
+      <%= f.submit  @company.new_record? ? t('create')  : t('update') , :class => "btn btn-primary" %>
       </div>
   
     </div>
