--- a/app/views/companies/index.html.erb
+++ b/app/views/companies/index.html.erb
@@ -1,17 +1,17 @@
 <div class="container">
 <p id="notice"><%= notice %></p>
 
-<h2>Listing Companies</h2>
+<h2><%= t('companies.listing')  %></h2>
 <div class="well">
-  <%= link_to 'New Company', new_company_path, remote: true, class: "btn btn-primary" %>
+  <%= link_to t('companies.new'), new_company_path, remote: true, class: "btn btn-primary" %>
 </div>
 <div class="new-company"></div>
 
 <table class="table table-bordered table-striped">
   <thead>
     <tr>
-      <th>Name</th>
-      <th>Address</th>
+      <th><%= t('companies.name')  %></th>
+      <th><%= t('companies.address')  %></th>
       <th colspan="3"></th>
     </tr>
   </thead>
