--- a/app/views/companies/new.js.erb
+++ b/app/views/companies/new.js.erb
@@ -1,5 +1,5 @@
 // Add the dialog title
-$('#dialog h3').html("<i class='glyphicon glyphicon-plus'></i> Add New Client");
+$('#dialog h3').html("<i class='glyphicon glyphicon-plus'></i> <%= t('companies.new')  %>");
  
 // Render the new form
 $('.modal-body').html('<%= j render("form") %>');
