--- a/app/views/deliveries/_form.html.erb
+++ b/app/views/deliveries/_form.html.erb
@@ -13,31 +13,32 @@
   <div class="row">
     <div class="col-sm-6">
       <div class="form-group">
-       <%= f.label :direction, :class => "control-label" %><br>
+       <%= f.label t('deliveries.direction'), :class => "control-label" %><br>
        <%= f.text_field :direction, :class => "form-control" %>
       </div>
       <div class="form-group">
-        <%= f.label :cost, :class => "control-label" %><br>
+        <%= f.label t('deliveries.cost'), :class => "control-label" %><br>
         <%= f.number_field :cost, :class => "form-control" %>
       </div>
       <div class="form-group">
-        <%= f.label :execution_documen, :class => "control-label" %><br>
+        <%= f.label t('deliveries.execution_document'), :class => "control-label" %><br>
         <%= f.number_field :execution_document, :class => "form-control" %>
       </div>
       <div class="form-group">
-        <%= f.label :check_factory, :class => "control-label" %><br>
+        <%= f.label t('deliveries.check_factory'), :class => "control-label" %><br>
         <%= f.number_field :check_factory, :class => "form-control" %>
       </div>
+
       <div class="form-group">
-        <%= f.label :bank_service, :class => "control-label" %><br>
+        <%= f.label t('deliveries.bank_service'), :class => "control-label" %><br>
         <%= f.number_field :bank_service, :class => "form-control" %>
       </div>
       <div class="form-group">
-        <%= f.label :bank_percent, :class => "control-label" %><br>
+        <%= f.label t('deliveries.bank_percent'), :class => "control-label" %><br>
         <%= f.number_field :bank_percent, step: 0.1, :class => "form-control" %>
       </div>
       <div class="actions">
-        <%= f.submit  @delivery.new_record? ? "Create Delivery" : "Update Delivery", :class => "btn btn-primary" %>
+        <%= f.submit  @delivery.new_record? ? t('create') : t('update'), :class => "btn btn-primary" %>
       </div>
     </div>
   </div>
