--- a/app/views/deliveries/new.js.erb
+++ b/app/views/deliveries/new.js.erb
@@ -1,5 +1,5 @@
 // Add the dialog title
-$('#dialog h3').html("<i class='glyphicon glyphicon-plus'></i> Add New Delivery");
+$('#dialog h3').html("<i class='glyphicon glyphicon-plus'></i> <%= t('deliveries.new') %>");
  
 // Render the new form
 $('.modal-body').html('<%= j render("form") %>');
