--- a/app/views/factories/new.js.erb
+++ b/app/views/factories/new.js.erb
@@ -1,5 +1,5 @@
 // Add the dialog title
-$('#dialog h3').html("<i class='glyphicon glyphicon-plus'></i> Add New Brand");
+$('#dialog h3').html("<i class='glyphicon glyphicon-plus'></i> <%= t('brand.new_brand') %>");
  
 // Render the new form
 $('.modal-body').html('<%= j render("form") %>');
