--- a/app/views/styles/edit.js.erb
+++ b/app/views/styles/edit.js.erb
@@ -1,5 +1,5 @@
 // Add the dialog title
-$('#dialog h3').html("<i class=' glyphicon glyphicon-pencil'></i> Edit Style");
+$('#dialog h3').html("<i class=' glyphicon glyphicon-pencil'></i> <%= t('styles.edit') %>");
  
 // Render the edit form
 $('.modal-body').html('<%= j render("form") %>');
