--- a/app/views/type_furnitures/index.html.erb
+++ b/app/views/type_furnitures/index.html.erb
@@ -1,15 +1,15 @@
 <div class="container"> 
   <p id="notice"><%= notice %></p>
 
-  <h2>Listing Type Furnitures</h2>
+  <h2><%= t('type_furnitures.listing') %></h2>
   <div class="well">
-    <%= link_to 'New Type furniture', new_type_furniture_path, remote: true, class: "btn btn-primary" %>
+    <%= link_to t('type_furnitures.new'), new_type_furniture_path, remote: true, class: "btn btn-primary" %>
   </div>
   <div class="new-type_furniture"></div>
   <table class="table table-bordered table-striped table-hover">
     <thead>
       <tr>
-        <th>Name</th>
+        <th><%= t('type_furnitures.name') %></th>
         <th colspan="3"></th>
       </tr>
     </thead>
