--- a/app/views/type_furnitures/new.js.erb
+++ b/app/views/type_furnitures/new.js.erb
@@ -1,5 +1,5 @@
 // Add the dialog title
-$('#dialog h3').html("<i class='glyphicon glyphicon-plus'></i><%= 'New Type' %>");
+$('#dialog h3').html("<i class='glyphicon glyphicon-plus'></i><%= t('type_furnitures.new') %>");
  
 // Render the new form
 $('.modal-body').html('<%= j render("form") %>');
