--- a/app/views/factories/index.html.erb
+++ b/app/views/factories/index.html.erb
@@ -2,7 +2,9 @@
   <%= flash[:alert] %>
   <h2><%= t('brand.brands') %></h2>
   <div class="well">
+  <% if can? :create, Factory %>
     <%= link_to t('brand.new_brand'), new_factory_path, remote: true, class: "btn btn-primary" %>
+  <% end -%>
   </div>
   <div class="new-brand"></div>
  
