--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -11,6 +11,7 @@
       <tr>
         <th><%= link_to t('products.article') %></th>
         <th><%= link_to t('type_furnitures.type_furniture') %></th>
+        <th><%= link_to t('products.model') %></th>
         <th><%= link_to t('factories.factory') %></th>
         <th><%= link_to t('products.price') %></th>
         <th colspan="3"></th>
