--- a/app/views/size_images/show.html.erb
+++ b/app/views/size_images/show.html.erb
@@ -1,4 +1,3 @@
 <p id="notice"><%= notice %></p>
+<%= image_tag @size_image.img(:medium) %>
 
-<%= link_to 'Edit', edit_size_image_path(@size_image) %> |
-<%= link_to 'Back', size_images_path %>
