--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,6 +13,7 @@
  *= require_tree .
  *= require_self
  *= require jquery-ui/datepicker
+ *= require jquery.jcrop
  */	
 @import 'bootstrap-sprockets';
 @import "bootstrap";
